--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,12 +16,21 @@
     <string name="action_budget">Budget</string>
     <string name="action_revenue">Revenue</string>
     <string name="action_keywords">Keywords</string>
-
-
+    <string name="tv_personal_info">Personal Info</string>
+    <string name="tv_known_for">Known For</string>
+    <string name="tv_gender">Gender</string>
+    <string name="tv_known_credits">Known Credits</string>
+    <string name="tv_birthday">Birthday</string>
+    <string name="tv_place_of_births">Place of Births</string>
+    <string name="tv_biography">Biography</string>
+    <string name="tv_acting">Acting</string>
     <string name="menu_main">Movie</string>
     <string name="menu_movie_details">Movie Details</string>
     <string name="menu_tv_show">TV Shows</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_Popular">Popular</string>
     <string name="menu_slideshow">Favorites Movies</string>
+
+
+
 </resources>
