--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="tv_acting">Acting</string>
     <string name="menu_main">Movie</string>
     <string name="menu_movie_details">Movie Details</string>
+    <string name="menu_people_details">People Details</string>
     <string name="menu_tv_show">TV Shows</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_Popular">Popular</string>
